--- a/exercises/13_chipseq_analysis.Rmd
+++ b/exercises/13_chipseq_analysis.Rmd
@@ -410,7 +410,13 @@ conda activate MACS
 macs_outdir=/Users/$USER/Desktop/Genomic_Data_Analysis/Analysis/ChIP/
 
 # run macs on the 0 minutes sample, no control
-macs2 callpeak -t /Users/$USER/Desktop/Genomic_Data_Analysis/Data/Bam/ChIP/SRR1181480_R1.fastq.gz.subread.BAM -n MSN24_ESR_t0_noControl --outdir $macs_outdir -f BAMPE -g 1.2e7 --nomodel --extsize 50
+macs2 callpeak -t /Users/$USER/Desktop/Genomic_Data_Analysis/Data/Bam/ChIP/SRR1181480_R1.fastq.gz.subread.BAM \
+  -n MSN24_ESR_t0_noControl \
+  --outdir $macs_outdir \
+  -f BAMPE \
+  -g 1.2e7 \
+  --nomodel \
+  --extsize 50
 
 
 # run macs on the 20 minutes sample, no control
@@ -419,6 +425,7 @@ macs2 callpeak -t "/Users/$USER/Desktop/Genomic_Data_Analysis/Data/Bam/ChIP/SRR1
                --outdir $macs_outdir \
                -f BAMPE \
                -g 1.2e7 \
+               -B \
                --nomodel \
                --extsize 50
 
@@ -427,7 +434,15 @@ macs2 callpeak -t "/Users/$USER/Desktop/Genomic_Data_Analysis/Data/Bam/ChIP/SRR1
                -n MSN24_ESR_t20vst0 \
                -c "/Users/$USER/Desktop/Genomic_Data_Analysis/Data/Bam/ChIP/SRR1181481_R1.fastq.gz.subread.BAM" \
                --outdir $macs_outdir \
+               -B \
                -f BAMPE -g 1.2e7 #--nomodel --extsize 50 -w -S
+               
+
+# Rename all *.bdg to *.bedgraph for IGV 
+for file in ${macs_outdir}*.bdg; do
+   mv -- "$file" "${file%.bdg}.bedgraph"
+done
+
 ```
 
 ### OPTIONAL: Assess Peak call quality using ChIPQC
